--- a/packages/app-staking/src/Overview/index.css
+++ b/packages/app-staking/src/Overview/index.css
@@ -2,8 +2,16 @@
 /* This software may be modified and distributed under the terms
 /* of the ISC license. See the LICENSE file for details. */
 
+.validator--Account-details {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 5px;
+  padding-bottom: 2px;
+}
+
 .validator--Account-info {
-  display: inline-block;
+  flex: 1;
 }
 
 .validator--Account-address {
@@ -26,6 +34,11 @@
   opacity: 1 !important;
 }
 
+.validator--Account-details,.column{
+  flex: 1;
+  border: 1px, solid blue;
+}
+
 .validator--Account-balance,
 .validator--Account-nonce {
   opacity: 0.45;
@@ -36,14 +49,14 @@
   border: 1px solid green ;
   border-radius: 10px;
   background-color: #e0f8e0;
-  padding: 20px;
+  padding: 10px;
 }
 
 .validator--IntensionsList{
   border: 1px solid blue ;
-  border-radius: 10px;
+  border-radius: 7px;
   background-color: #e0e6f8;
-  padding: 20px;
+  padding: 10px;
 }
 
 .app-validators--Query .app-validators--actionrow-value {
